# ComancheGoldEditor

./: CMakeLists.txt  CmakeLists.txt.user.24a43c2  CmakeLists.txt.user.e6ded86  Instanciator.cpp  main.cpp  readme.md
Old/: mainWindow.cpp  mainWindow.h
core/qt/: miscFunctions.cpp  miscFunctions.h  miscFunctions.hpp  qtFunctions.cpp  qtFunctions.h
core/tests/: pffTests.cpp  pffTests.h
core/tool/: novaPCXencoding.cpp  novaPCXencoding.h
gui/: editors.cpp  mainApplication.cpp  mainApplication.h  mapEditor.cpp  mapEditor.h  myMdiSubWindow.h  pffEditor.cpp  pffEditor.h  pffEditorActions.cpp  pffEditorActions.h
gui/qtHelpers/: guiSetup.cpp  guiSetup.h  guiSetup.hpp
